# AutoCAD-MCP

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LOCAL_CHANGES.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: ARCHITECTURE-REVIEW-20260718.md  CAD-5-ROUND-CAMPAIGN-20260719.md  INCIDENT-20260718-EXECUTION-HANG.md  MIGRATION-4.0.md  ROADMAP.md  WINDOWS-AUTOCAD-RECOVERY.md
examples/: generate_actuator_promo.py  generate_showcase.py  headless_demo.py
lisp-code/: attribute_tools.lsp  mcp_dispatch.lsp
native/: README.md
native/AutoCADMcp.Plugin/: AutoCADMcp.Plugin.csproj  CadDispatcher.cs  DocumentRegistry.cs  PipeServer.cs  PluginEntry.cs  Protocol.cs
native/AutoCADMcp.bundle/: PackageContents.xml
native/scripts/: build-plugin.ps1
skills/industrial-product-design/: SKILL.md
tests/: conftest.py  manual_autocad_smoke.py  manual_product_3d_smoke.py  run_autostart_rounds.py  run_bounded.py  smoke_campaign_bounds.py  smoke_hatch_contract.py  smoke_native_pipe.py  smoke_startup_gate.py  test_audit.py  test_autostart.py  test_client_transport_guard.py  test_com_sta.py  test_contracts.py  test_delivery.py  test_drafting.py  test_ezdxf_backend.py  test_ipc_protocol.py  test_journal.py  test_native_pipe.py  test_plot_contract.py  test_product_design.py  test_resilience.py  test_runtime_health.py  test_screenshot.py  test_session.py  test_supervisor.py  test_transport_guard.py  test_variables.py  test_visual_styles.py  test_workspace.py
(+32 files in other folders)
