[project]
name = "autocad-mcp"
version = "4.0.0"
description = "MCP server for full AutoCAD, AutoCAD LT, and headless DXF generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["autocad", "cad", "mcp", "model-context-protocol", "automation", "ezdxf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp[cli]>=1.2.1,<2.0",
    "ezdxf>=0.18",
    "matplotlib>=3.7",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.24.0",
    "structlog>=24.0.0",
    "pywin32>=305; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/beiming183-cloud/AutoCAD-MCP"
Documentation = "https://github.com/beiming183-cloud/AutoCAD-MCP#readme"
Issues = "https://github.com/beiming183-cloud/AutoCAD-MCP/issues"
Source = "https://github.com/beiming183-cloud/AutoCAD-MCP"

[project.scripts]
autocad-mcp = "autocad_mcp.server:main"
autocad-mcp-supervisor = "autocad_mcp.supervisor:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autocad_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
